--- a/ClientIT/ClientIT.csproj
+++ b/ClientIT/ClientIT.csproj
@@ -3,7 +3,7 @@
 		<OutputType>WinExe</OutputType>
 		<TargetFramework>net8.0-windows10.0.19041.0</TargetFramework>
 		<TargetPlatformMinVersion>10.0.17763.0</TargetPlatformMinVersion>
-		<RootNamespace>ClientUser</RootNamespace>
+		<RootNamespace>ClientIT</RootNamespace>
 		<ApplicationManifest>app.manifest</ApplicationManifest>
 		<Platforms>x86;x64;ARM64</Platforms>
 		<RuntimeIdentifiers>win-x86;win-x64;win-arm64</RuntimeIdentifiers>
@@ -36,7 +36,6 @@
 
 	<!-- Pacchetto NuGet WinUI 3 -->
 	<ItemGroup>
-		<!-- Assicurati che la versione sia coerente con ClientIT, es: 1.5.240428000 -->
 		<PackageReference Include="Microsoft.WindowsAppSDK" Version="1.5.240428000" />
 	</ItemGroup>
 
