--- a/ClientIT/ClientIT.csproj
+++ b/ClientIT/ClientIT.csproj
@@ -35,6 +35,7 @@
 	<!-- Pacchetto NuGet WinUI 3 -->
 	<ItemGroup>
 		<PackageReference Include="Microsoft.WindowsAppSDK" Version="1.5.240428000" />
+		<PackageReference Include="LiveChartsCore.SkiaSharpView.WinUI" Version="2.0.0-rc2" />
 	</ItemGroup>
 
 	<!-- Proprietà MSIX -->
