--- a/ClientIT/ClientIT.csproj
+++ b/ClientIT/ClientIT.csproj
@@ -11,13 +11,12 @@
 		<UseWinUI>true</UseWinUI>
 		<EnableMsixTooling>true</EnableMsixTooling>
 		<Nullable>enable</Nullable>
-
 	</PropertyGroup>
+
 	<ItemGroup>
-	  <None Remove="Controls\StatisticsControl.xaml" />
+		<None Remove="Controls\StatisticsControl.xaml" />
 	</ItemGroup>
 
-	<!-- Asset e Manifest -->
 	<ItemGroup>
 		<Content Include="Assets\SplashScreen.scale-200.png" />
 		<Content Include="Assets\LockScreenLogo.scale-200.png" />
@@ -32,20 +31,22 @@
 		<Manifest Include="$(ApplicationManifest)" />
 	</ItemGroup>
 
-	<!-- Pacchetto NuGet WinUI 3 -->
 	<ItemGroup>
 		<PackageReference Include="Microsoft.WindowsAppSDK" Version="1.5.240428000" />
-		<PackageReference Include="LiveChartsCore.SkiaSharpView.WinUI" Version="2.0.0-rc1.2" />
+		
+		<PackageReference Include="LiveChartsCore.SkiaSharpView.WinUI" Version="2.0.0-rc2" />
+		
+		<PackageReference Include="LiveChartsCore.Behaviours" Version="2.0.0-rc2" />
 	</ItemGroup>
 
-	<!-- Proprietà MSIX -->
 	<ItemGroup Condition="'$(DisableMsixProjectCapabilityAddedByProject)'!='true' and '$(EnableMsixTooling)'=='true'">
 		<ProjectCapability Include="Msix" />
 	</ItemGroup>
+	
 	<ItemGroup>
-	  <Page Update="Controls\StatisticsControl.xaml">
-	    <Generator>MSBuild:Compile</Generator>
-	  </Page>
+		<Page Update="Controls\StatisticsControl.xaml">
+			<Generator>MSBuild:Compile</Generator>
+		</Page>
 	</ItemGroup>
 
 	<PropertyGroup Condition="'$(DisableHasPackageAndPublishMenuAddedByProject)'!='true' and '$(EnableMsixTooling)'=='true'">
@@ -58,4 +59,5 @@
 		<PublishTrimmed Condition="'$(Configuration)' == 'Debug'">False</PublishTrimmed>
 		<PublishTrimmed Condition="'$(Configuration)' != 'Debug'">True</PublishTrimmed>
 	</PropertyGroup>
-</Project>
+    
+    </Project>
