integrazione programma enzo

--- a/ClientIT/ClientIT.csproj
+++ b/ClientIT/ClientIT.csproj
@@ -44,6 +44,12 @@
 	</ItemGroup>
 
 	<ItemGroup>
+	  <Page Update="Controls\UserAdminControl.xaml">
+	    <Generator>MSBuild:Compile</Generator>
+	  </Page>
+	</ItemGroup>
+
+	<ItemGroup>
 	  <Page Update="Controls\NewTicketControl.xaml">
 	    <Generator>MSBuild:Compile</Generator>
 	  </Page>
