--- a/ClientIT/ClientIT.csproj
+++ b/ClientIT/ClientIT.csproj
@@ -14,7 +14,9 @@
 	</PropertyGroup>
 
 	<ItemGroup>
+		<None Remove="Controls\NewProjectControl.xaml" />
 		<None Remove="Controls\NewTicketControl.xaml" />
+		<None Remove="Controls\PhaseDetailDialog.xaml" />
 		<None Remove="Controls\StatisticsControl.xaml" />
 	</ItemGroup>
 
@@ -41,6 +43,18 @@
 
 	<ItemGroup Condition="'$(DisableMsixProjectCapabilityAddedByProject)'!='true' and '$(EnableMsixTooling)'=='true'">
 		<ProjectCapability Include="Msix" />
+	</ItemGroup>
+
+	<ItemGroup>
+	  <Page Update="Controls\PhaseDetailDialog.xaml">
+	    <Generator>MSBuild:Compile</Generator>
+	  </Page>
+	</ItemGroup>
+
+	<ItemGroup>
+	  <Page Update="Controls\NewProjectControl.xaml">
+	    <Generator>MSBuild:Compile</Generator>
+	  </Page>
 	</ItemGroup>
 
 	<ItemGroup>
